<resources>
    <string name="app_name">Quaker</string>

    <string name="magnitude">0.0</string>

    <string name="near_the">Near the</string>
    <string name="location">Location</string>

    <string name="time">Time</string>
    <string name="date">Date</string>

    <string name="no_quakes_found">No Quakes Found</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="settings">Settings</string>

    <string name="min_magnitude">Minimum Magnitude</string>
    <string name="min_magnitude_default">6</string>
    <string name="min_magnitude_key">settingsMagnitude</string>

    <string name="limit">Number of quakes to load</string>
    <string name="limit_default">10</string>
    <string name="limit_key">settingsLimit</string>

    <string name="order_by">Order By</string>
    <string name="order_by_default">@string/orderByMagnitudeValue</string>
    <string name="order_by_key">settingsOrderBy</string>

    <string name="orderByMagnitudeLabel">Magnitude</string>
    <string name="orderByMagnitudeValue">magnitude</string>

    <string name="orderByMostRecentLabel">Most Recent</string>
    <string name="orderByMostRecentValue">time</string>

    <string-array name="orderByLabels">
        <item>@string/orderByMagnitudeLabel</item>
        <item>@string/orderByMostRecentLabel</item>
    </string-array>

    <string-array name="orderByValues">
        <item>@string/orderByMagnitudeValue</item>
        <item>@string/orderByMostRecentValue</item>
    </string-array>
</resources>
