<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <EditTextPreference
        android:defaultValue="@string/min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/min_magnitude"/>

    <EditTextPreference
        android:defaultValue="@string/limit_default"
        android:inputType="number"
        android:key="@string/limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/limit"/>

    <ListPreference
        android:defaultValue="@string/order_by_default"
        android:entries="@array/orderByLabels"
        android:entryValues="@array/orderByValues"
        android:key="@string/order_by_key"
        android:title="@string/order_by"/>
</PreferenceScreen>
