<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/activity_gutter"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/txtMagnitude"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/magnitude"/>

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/date"/>
</LinearLayout>
